# AVPStudio

./: .gitignore  CMakeLists.txt  README.md  README_zh_CN.md  cinemalist.xml
res/: resources.qrc  resources_win.rc.in
res/styles/: mainstyle.qss
res/texts/: aboutinfo_zh_CN.md
setup/windows/: LICENSE_zh_CN.txt.in  winsetup.iss.in
src/: doprocess.cpp  doprocess.h  main.cpp  settings.cpp  settings.h
src/forms/aboutwindow/: aboutwindow.cpp  aboutwindow.h  aboutwindow.ui
src/forms/mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui  pagecompleted.cpp  pagecompleted.h  pagecompleted.ui  pagecreate.cpp  pagecreate.h  pagecreate.ui  pageedit.cpp  pageedit.h  pageedit.ui  pageprocess.cpp  pageprocess.h  pageprocess.ui  pagewelcome.cpp  pagewelcome.h  pagewelcome.ui
tools/: CMakeLists.txt
tools/imageorganizer/: CMakeLists.txt
tools/imageorganizer/res/: resources_win.rc.in
tools/imageorganizer/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
tools/mxlplayer/: CMakeLists.txt
tools/mxlplayer/res/: resources_win.rc.in
tools/mxlplayer/src/: avpsettings.h  doexport.cpp  doexport.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  playcontrol.cpp  playcontrol.h  playcontrol.ui  playvideo.cpp  playvideo.h
tools/wavgenerator/: CMakeLists.txt
tools/wavgenerator/res/: resources_win.rc.in
tools/wavgenerator/src/: genprocess.cpp  genprocess.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
